fix alignment p's on patent page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1941,9 +1941,9 @@ pre code {
   .col-md-11 {
     width: 91.66666667%;
   }
-  .col-md-10 {
+  /*.col-md-10 {
     width: 83.33333333%;
-  }
+  }*/
   .col-md-9 {
     width: 75%;
   }
@@ -1966,7 +1966,7 @@ pre code {
     width: 25%;
   }
   .col-md-2 {
-    width: 16.66666667%;
+    /*width: 16.66666667%;*/
   }
   .col-md-1 {
     width: 8.33333333%;
